# mod_dims

./: .env  .gitignore  COPYING  ChangeLog  Dockerfile  Dockerfile.builder  LICENSE  Makefile.in  README  README.markdown  README.md  aclocal.m4  autorun.sh  build.zig  configure  configure.ac  dims.conf  httpd.conf  mod_dims.spec
.devcontainer/: Dockerfile  devcontainer.json
autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
docker/: Dockerfile  Dockerfile-dev  Dockerfile-ubuntu-14.04  Dockerfile-ubuntu-16.04  README.md  dims.conf  entrypoint-dev.sh  entrypoint.sh
examples/: dims.conf
m4/: apache.m4
src/: Makefile.am  Makefile.in  cmyk_icc.h  configuration.c  configuration.h  curl.c  curl.h  directives.h  encryption.c  encryption.h  handler.c  handler.h  initialize.c  initialize.h  mod_dims.c  mod_dims.c~  mod_dims.h  mod_dims_ops.c  mod_dims_ops.h  module.c  module.h  request.h  smartcrop.c  status.c  status.h
